--- a/web/app/themes/sleepmaker/static/src/sass/blocks/size-guide/size-guide.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/size-guide/size-guide.sass
@@ -1,18 +1,37 @@
 .size-guide
-    max-width: 585px
-    margin-left: auto
-    margin-right: 0
-    padding-left: 40px
-    +r(768)
-        max-width: none
-        margin-bottom: 20px
-        padding: 0
+    width: 100%
+    max-width: 1140px
+    margin: 0 auto
 
 .size-guide-wrap
     display: flex
     flex-flow: row wrap
-    justify-content: space-between
+    justify-content: flex-start
     margin: 0 -2%
-    +r(768)
+    +r(450)
         justify-content: center
         margin: 0
+
+.size-guide-content
+    max-width: 725px
+    margin: 0 auto
+    margin-bottom: 70px
+    padding-bottom: 55px
+    position: relative
+    text-align: center
+    +r(768)
+        margin-bottom: 60px
+        padding-bottom: 40px
+    h3
+        text-transform: uppercase
+    &::after
+        content: ''
+        display: block
+        width: 82%
+        height: 1px
+        background: $main
+        max-width: 500px
+        position: absolute
+        bottom: 0
+        left: 50%
+        transform: translateX(-50%)
