--- a/web/app/themes/sleepmaker/static/src/sass/blocks/history/history-item.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/history/history-item.sass
@@ -20,6 +20,9 @@
             .history-item__decor
                 right: 100%
                 transform: translateX(45%)
+            .history-item__title
+                +rm(1024)
+                    max-width: 300px
         &:nth-child(even)
             flex-flow: row-reverse
             margin-right: auto
@@ -140,7 +143,6 @@
             position: absolute
             bottom: 0
             right: 0
-
     &__date
         font-family: $f1
         font-size: 30px
@@ -158,8 +160,6 @@
         letter-spacing: 0.43px
         color: $main
         margin-bottom: 20px
-        +rm(1024)
-            max-width: 300px
     &__text
         font-family: $f1
         font-size: 16px
