--- a/web/app/themes/sleepmaker/static/src/sass/_props.scss
+++ b/web/app/themes/sleepmaker/static/src/sass/_props.scss
@@ -14,7 +14,8 @@ $bg-color: $white;
 $accent: $red;
 // END COLORS
 
-$main: #002e5d;
+// $main: #002e5d;
+$main: #308ba1;
 $bg-color: $white;
 $accent: $red;
 // END COLORS
