--- a/web/app/themes/sleepmaker/static/src/sass/blocks/blog-card/blog-card-slider.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/blog-card/blog-card-slider.sass
@@ -14,12 +14,12 @@
         &.swiper-pagination-lock
             display: none
     .swiper-pagination-bullet
-        background-color: #01295b
+        background-color: $main
         opacity: .2
         transition: opacity .3s
         margin: 3px
         &.swiper-pagination-bullet-active
-            background-color: #01295b
+            background-color: $main
             opacity: 1
     .swiper-container
         margin: 0 -15px
