--- a/web/app/themes/sleepmaker/static/src/sass/blocks/form/input-check.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/form/input-check.sass
@@ -45,7 +45,7 @@
                 width: 20px
                 height: 20px
                 border-radius: 2px
-                border: 1px solid #01295b
+                border: 1px solid $main
                 position: absolute
                 left: 0
                 top: 0
@@ -54,7 +54,7 @@
                 display: block
                 width: 12px
                 height: 12px
-                background: #01295b
+                background: $main
                 position: absolute
                 border-radius: 2px
                 left: 4px
