--- a/web/app/themes/sleepmaker/static/src/sass/blocks/form/input-item.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/form/input-item.sass
@@ -1,7 +1,7 @@
 .input-item
     font-size: 0
     border-radius: 3px
-    border: 1px solid rgba(#002e5d, .33)
+    border: 1px solid rgba($main, .33)
     background-color: $white
     position: relative
     margin-bottom: 20px
@@ -22,8 +22,8 @@
             display: block
             width: 8px
             height: 8px
-            border-bottom: 1px solid rgba(#01295b, .76)
-            border-right: 1px solid rgba(#01295b, .76)
+            border-bottom: 1px solid rgba($main, .76)
+            border-right: 1px solid rgba($main, .76)
             position: absolute
             top: 50%
             right: 30px
