--- a/web/app/themes/sleepmaker/static/src/sass/blocks/header/header-find.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/header/header-find.sass
@@ -13,5 +13,6 @@
         display: block
         width: 30px
         height: 30px
+        color: $main
         +rm(1025)
             display: none
