--- a/web/app/themes/sleepmaker/static/src/templates/layout.pug
+++ b/web/app/themes/sleepmaker/static/src/templates/layout.pug
@@ -33,7 +33,7 @@ html
 		.svg-icon(style="display: none;")
 			<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 				<symbol id="menu-arrow" width="8" height="12" viewBox="0 0 8 12">
-					<path fill="none" stroke="#002e5d" stroke-miterlimit="20" stroke-width="1" d="M6.488 11.333v0L1.333 5.998v0L6.488.667v0" />
+					<path fill="none" stroke="currentColor" stroke-miterlimit="20" stroke-width="1" d="M6.488 11.333v0L1.333 5.998v0L6.488.667v0" />
 				</symbol>
 				<symbol width="8" height="12" viewBox="0 0 8 12" id="left-arrow">
 					<path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="20" stroke-width="1.5" d="M6.485.67v0L1.33 6.006v0l5.155 5.33v0"></path>
