--- a/web/app/themes/sleepmaker/static/src/templates/pages/blog/index.pug
+++ b/web/app/themes/sleepmaker/static/src/templates/pages/blog/index.pug
@@ -54,7 +54,7 @@ block content
                 .long-card-wrap
                     +long-card({
                         img: 'long-img-1',
-                        bg: '#002e5d',
+                        bg: '#308ba1',
                         color: '#ffffff'
                     })
                         .long-card__title TRY OUR SLEEPMAKER SLEEP SELECTOR 
@@ -65,7 +65,7 @@ block content
                         +article-card(article)
                 .article-pagination
                     a(href="#").article-pagination__prev.article-pagination__button
-                        <svg xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 8 12"><path fill="none" stroke="#002e5d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="20" stroke-width="1.5" d="M6.485.67v0L1.33 6.006v0l5.155 5.33v0"/></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 8 12"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="20" stroke-width="1.5" d="M6.485.67v0L1.33 6.006v0l5.155 5.33v0"/></svg>
                     ul.article-pagination__pages
                         li.article-pagination__number 
                             a.article-pagination__button.prev(href="#") 1
@@ -80,7 +80,7 @@ block content
                         li.article-pagination__number 
                             a.article-pagination__button(href="#") 7
                     a(href="#").article-pagination__next.article-pagination__button
-                        <svg xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 8 12"><path fill="none" stroke="#002e5d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="20" stroke-width="1.5" d="M6.485.67v0L1.33 6.006v0l5.155 5.33v0"/></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 8 12"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="20" stroke-width="1.5" d="M6.485.67v0L1.33 6.006v0l5.155 5.33v0"/></svg>
 
         +wide-decor({bg:'footer',bttns:['Find a store near you','View latest deals']})
             img.wide-decor__logo(src="/img/wide-logo.png", alt="logo")
