change main site color

--- a/web/app/themes/sleepmaker/style.css
+++ b/web/app/themes/sleepmaker/style.css
@@ -111,7 +111,7 @@ Version: 1.0.0
     font-size: 15px;
     line-height: 18px;
     letter-spacing: 1px;
-    color: #002e5d;
+    color: #308ba1;
     padding: 15px;
     background: #fff;
     resize: none;
@@ -246,14 +246,14 @@ Version: 1.0.0
     box-sizing: border-box;
     transition: all .3s;
     pointer-events: auto;
-    color: #002e5d;
-    border: 1px solid #002e5d;
+    color: #308ba1;
+    border: 1px solid #308ba1;
     min-width: 210px;
     overflow: hidden;
 }
 
 .form-scale .gform_wrapper .gform_footer input[type='submit']:after{
-    background: #002e5d;
+    background: #308ba1;
     content: "";
     display: block;
     width: 100%;
@@ -269,7 +269,7 @@ Version: 1.0.0
 
 .form-scale .gform_wrapper .gform_footer input[type='submit']:hover{
     color: #fff;
-    background: #002e5d;
+    background: #308ba1;
 }
 
 .form-scale .gform_wrapper .gfield_chainedselect{
@@ -424,12 +424,12 @@ Version: 1.0.0
 }
 
 input::-moz-placeholder, textarea::-moz-placeholder, select::-moz-placeholder{
-    color: #002e5d;
+    color: #308ba1;
     opacity: 0.5;
 }
 
 input::placeholder, textarea::placeholder, select::placeholder{
-    color: #002e5d;
+    color: #308ba1;
     opacity: 1;
 }
 
@@ -476,7 +476,7 @@ body .form-scale .gform_wrapper ul li.gfield{
     }
 }
 li a.header-nav__list-link {
-   color: #002e5d;
+   color: #308ba1;
 }
 nav.header-nav .header-nav__drop {
     background-color: #fdfefe;
@@ -491,7 +491,7 @@ nav .header-nav__drop-nav {
 }
 .page-numbers.current {
     color: #fff;
-    background: #002e5d;
+    background: #308ba1;
 }
 .page-numbers {
     display: inline-flex;
@@ -504,12 +504,12 @@ nav .header-nav__drop-nav {
     font-weight: 400;
     justify-content: center;
     align-items: center;
-    color: #002e5d;
+    color: #308ba1;
     border: 1px solid transparent;
     transition: all .5s;
 }
 .page-numbers:hover{
-    border: 1px solid #002e5d;
+    border: 1px solid #308ba1;
 }
 .page-numbers.next, .page-numbers.prev{
     display: inline-flex;
@@ -520,11 +520,11 @@ nav .header-nav__drop-nav {
     background: #fff;
     font-size: 20px;
     font-weight: 400;
-    border: 1px solid #002e5d;
+    border: 1px solid #308ba1;
     transition: all .5s;
 }
 .page-numbers.next path, .page-numbers.prev path{
-    stroke: #002e5d;
+    stroke: #308ba1;
 }
 .page-numbers.prev{
     margin-right: 30px;
@@ -534,7 +534,7 @@ nav .header-nav__drop-nav {
     transform: scale(-1);
 }
 .page-numbers.next:hover, .page-numbers.prev:hover{
-    background: #002e5d;
+    background: #308ba1;
 }
 .page-numbers.next:hover path, .page-numbers.prev:hover path{
     stroke: white;
@@ -557,7 +557,7 @@ nav .header-nav__drop-nav {
 }
 .find-item h5 {
     font-family: Calibre,Roboto,Helvetica,Arial,sans-serif;
-    color: #002e5d;
+    color: #308ba1;
     font-size: 20px;
     font-weight: 500;
     letter-spacing: .43px;
@@ -566,7 +566,7 @@ nav .header-nav__drop-nav {
 }
 .find-item__text {
     font-family: Calibre,Roboto,Helvetica,Arial,sans-serif;
-    color: #002e5d;
+    color: #308ba1;
     margin-bottom: 25px;
     font-size: 16px;
     font-weight: 400;
@@ -574,7 +574,7 @@ nav .header-nav__drop-nav {
     letter-spacing: .34px;
 }
 .find-item__links a {
-    color: #002e5d;
+    color: #308ba1;
 }
 .map-greed__title {
     position: absolute;
@@ -635,10 +635,10 @@ nav .header-nav__drop-nav {
     font-weight: 400;
     letter-spacing: .43px;
     line-height: 1.1;
-    color: #002e5d;
+    color: #308ba1;
 }
 ._underlined-link, .wpsl-directions{
-    color: #002e5d;
+    color: #308ba1;
     transition: all .5s;
 }
 ._underlined-link:hover, .wpsl-directions:hover{
