Revert "change color"
This reverts commit d1a6fdb100287a2ffd3e7298327d4ff3394a928a.

--- a/web/app/themes/sleepmaker/static/src/sass/_props.scss
+++ b/web/app/themes/sleepmaker/static/src/sass/_props.scss
@@ -14,8 +14,7 @@ $bg-color: $white;
 $accent: $red;
 // END COLORS
 
-// $main: #002e5d;
-$main: #308ba1;
+$main: #002e5d;
 $bg-color: $white;
 $accent: $red;
 // END COLORS
