--- a/web/app/themes/sleepmaker/static/src/sass/blocks/contacts-sidebar.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/contacts-sidebar.sass
@@ -1,7 +1,7 @@
 .contacts
     width: 100%
     padding: 20px 27px 22px 27px
-    border: 1px solid rgba($main, 0.55)
+    border: 1px solid rgba(#01295b, 0.55)
     text-align: left
     +r(900)
         padding: 25px 20px
@@ -16,7 +16,7 @@
     &__title
         padding-bottom: 20px
         margin-bottom: 17px
-        border-bottom: 1px solid rgba($main, 0.55)
+        border-bottom: 1px solid rgba(#01295b, 0.55)
         font-size: 20px
         font-weight: 500
         letter-spacing: 0.43px
