--- a/web/app/themes/sleepmaker/static/src/sass/blocks/modals/modal.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/modals/modal.sass
@@ -132,7 +132,7 @@
 	&__item
 		width: 25%
 		padding: 33px 25px
-		background: $main
+		background: #002e5d
 		text-align: center
 		position: relative
 		flex-grow: 1
