--- a/web/app/themes/sleepmaker/static/src/templates/blocks/header/header-logo.pug
+++ b/web/app/themes/sleepmaker/static/src/templates/blocks/header/header-logo.pug
@@ -1,5 +1,5 @@
 mixin header-logo
     .header__logo
-        .header-logo(style="background-image:url(/img/oval.png)")
+        .header-logo(style="background-image:url(/img/oval.svg)")
             a.header-logo__link(href="#")
                 img.header-logo__img(src="/img/logo-header.png", alt="logo")
