--- a/web/app/themes/sleepmaker/static/src/sass/blocks/article/article-card-slider.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/article/article-card-slider.sass
@@ -10,12 +10,12 @@
         &.swiper-pagination-lock
             display: none
     .swiper-pagination-bullet
-        background-color: $main
+        background-color: #01295b
         opacity: .2
         transition: opacity .3s
         margin: 3px
         &.swiper-pagination-bullet-active
-            background-color: $main
+            background-color: #01295b
             opacity: 1
     .swiper-container
         margin: 0 -15px
