--- a/web/app/themes/sleepmaker/static/src/sass/blocks/article/article-card.sass
+++ b/web/app/themes/sleepmaker/static/src/sass/blocks/article/article-card.sass
@@ -93,7 +93,7 @@
         &.disable
             pointer-events: none
     &__prev
-        border: 1px solid $main
+        border: 1px solid #002e5d
     &__pages
         margin: 0 30px
         display: flex
@@ -102,5 +102,5 @@
     &__number
         margin: 0 2px
     &__next
-        border: 1px solid $main
+        border: 1px solid #002e5d
         transform: scaleX(-1)
